--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,10 +6,7 @@ html, body {
   padding: 0;
   height: 100%;
   width: 100%;
-  background-image: url('../../public/background.jpg');
-  background-size: 100% 100%;
-  background-position: center;
-  background-repeat: repeat;
+  background-color: grey;
 }
 
 #root {
@@ -33,9 +30,8 @@ html, body {
   /* Set the width and height of your game board here */
   width: 600px;
   height: 600px;
-  background-image: url('../../public/board.jpg');
-  background-size: 100% 100%;
-  background-position: center;
+  border: .5vmin solid #000;
+  box-shadow: 0 0 10vmin #000;
 }
 
 .square {
@@ -46,15 +42,17 @@ html, body {
   justify-content: center;
 }
 
-/*
-.light-square {
-  background-color: #eedcb3;
-}
 
 .dark-square {
-  background-color: #b58863;
+  background-color: beige;
+  box-shadow: inset 0 0 6vmin grey;
 }
-*/
+
+.light-square {
+  background-color: #505050;
+  box-shadow: inset 0 0 6vmin #000;
+}
+
 
 .piece {
   width: 60px;
@@ -71,8 +69,8 @@ html, body {
 }
 
 .with-border {
-  border-color: antiquewhite; /* Red border color for player 1 */
-  animation: pulse-border 0.75s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+  border-color: lightgreen; /* Red border color for player 1 */
+  box-shadow: 0 0 3vmin tan,0 0 1vmin #7cfc00;
 }
 
 @keyframes pulse-border {
@@ -114,15 +112,14 @@ html, body {
 @keyframes blink-background {
   0%, 100% {
   }
-  50% {
-    background-color: white;
+  25%, 50%, 75% {
+    background-color: lightgreen;
 
   }
 }
 
 .selected {
-  background-color: antiquewhite;
-  background-image: none
+  animation: pulse-border 0.75s cubic-bezier(0.4, 0, 0.2, 1) infinite;
 }
 
 @media screen and (max-width: 800px) {
@@ -139,6 +136,6 @@ html, body {
   .piece {
     width: 80%; /* Pieces take up a smaller portion of the square */
     height: 80%;
-    font-size: 16px; /* Smaller font size for pieces */
+    font-size: 14px; /* Smaller font size for pieces */
   }
 }
